--- a/src/Home.css
+++ b/src/Home.css
@@ -1,12 +1,13 @@
 .Background {
   background-color: #dae2e8;
+  height: 100%;
 
 }
 
 .Main {
   text-align: center;
-  padding-top: 3%;
-  padding-bottom: 3%;
+  padding-top: 5%;
+  padding-bottom: 5%;
   margin-left: 5%;
   margin-right: 5%;
 }
@@ -15,7 +16,6 @@
   background-color: #f9f9f9;
   height: 20%;
   color: #485167;
-  margin-bottom: 1%;
   display:flex;
   padding-left: 5%;
   padding-right: 5%;
@@ -48,33 +48,36 @@
   font-style: oblique 10deg;
 }
 
-.Main-section {
+.Home-section {
   font-size: large;
   background-color:#f9f9f9;
   padding-left: 10%;
   padding-right: 10%;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  margin-bottom: 1%;
+  padding-top: 2%;
+  padding-bottom: 1%;
 }
 
-.Desc {
+.Welcome {
   font-family: palatino;
   color: #485167;
+  padding: 1%;
+  padding-bottom: 3%;
+  font-size: small;
+  margin: 0%
 }
-
 
 .Mts {
-  height: 40vh;
+  margin-top: .5%;
+  height: 30vh;
   width: 90vw;
 }
+
 
 .Button {
   font-family: palatino;
   font-size: .75em;
   border-radius: 5px;
   padding: 1.5%;
-  margin: 1%;
   background-color: #a8c7ea;
 }
 
@@ -91,13 +94,4 @@
 
 .Line {
   color: #485167;
-}
-
-
-
-
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
