--- a/src/Main.css
+++ b/src/Main.css
@@ -1,30 +1,36 @@
+h1 {margin-bottom: 0; margin-top: 0;}
+
+p {margin-bottom: 0;}
+
 .Background {
   background-color: #dae2e8;
-
+  height: 100%;
 }
 
 .Main {
   text-align: center;
-  padding-top: 3%;
-  padding-bottom: 3%;
+  padding-top: 2%;
+  padding-bottom: 2%;
   margin-left: 5%;
   margin-right: 5%;
 }
 
-.Main-header {
-  background-color: #f9f9f9;
-  height: 20%;
+.Main-section-top {
+  font-size: large;
+  background-color:#f9f9f9;
+  padding-top: 1%;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 1%;
   color: #485167;
-  margin-bottom: 1%;
-  display:flex;
-  padding-left: 5%;
-  padding-right: 5%;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
+
+
 .Nav-bar {
-  padding-top: 4%;
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 1%;
 }
 
 .Main-nav {
@@ -37,15 +43,11 @@
   color: #a8c7ea;
 }
 
-.hide {
-  color: #f9f9f9;
-}
-
 
 .Main-title {
   font-size: 3em;
   font-family: palatino;
-  font-style: oblique 10deg;
+  font-style: bold;
 }
 
 .Main-section {
@@ -53,9 +55,8 @@
   background-color:#f9f9f9;
   padding-left: 10%;
   padding-right: 10%;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  margin-bottom: 1%;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
 .Desc {
