--- a/src/Resume.css
+++ b/src/Resume.css
@@ -1,9 +1,11 @@
-p { margin-top: -5px; }
+
 
 hr { margin-top: 0; }
 
+
 .Background {
   background-color: #dae2e8;
+  height: 100%;
 }
 
 .Main {
@@ -58,7 +60,6 @@ hr { margin-top: 0; }
   padding-right: 5%;
   padding-top: 3%;
   padding-bottom: 3%;
-  margin-bottom: 1%;
 }
 
 .Resume {
