--- a/src/About.css
+++ b/src/About.css
@@ -20,7 +20,14 @@ hr { margin-top: 0; }
   font-family: palatino;
   color: #485167;
   font-size: .8em;
-  text-align: left;
+  text-align: center;
+}
+
+.DescTwo {
+  font-family: palatino;
+  color: #485167;
+  font-size: .7em;
+  text-align: center;
 }
 
 .Container {
