--- a/src/Contact.css
+++ b/src/Contact.css
@@ -22,6 +22,12 @@ hr { margin-top: 0; }
   width: 200px;
 }
 
+.fox {
+  margin-top: 10%;
+  height: 20%;
+  width: 20%;
+}
+
 .message {
   border-radius: 5px;
   height: 200px;
