--- a/src/Home.css
+++ b/src/Home.css
@@ -1,10 +1,6 @@
 div { margin: 0; }
 
 
-.Background {
-  background-color: #dae2e8;
-}
-
 .Home-section {
   font-size: large;
   background-color:#dae2e8;
@@ -15,9 +11,9 @@ div { margin: 0; }
 }
 
 .Sun {
-  padding: 2vh;
-  height: 15vh;
-  width: 8vw;
+  padding: 2%;
+  height: 15%;
+  width: 10%;
 }
 
 .Welcome {
@@ -34,9 +30,9 @@ div { margin: 0; }
 }
 
 .Buildings {
-  margin-top: 5%;
-  height: 20vh;
-  width: 80vw;
+  margin-top: 6%;
+  height: 20%;
+  width: 80%;
 }
 
 
@@ -99,9 +95,9 @@ div { margin: 0; }
 }
 
 .x3 {
-	-webkit-animation: animateCloud 30s linear infinite;
-	-moz-animation: animateCloud 30s linear infinite;
-	animation: animateCloud 30s linear infinite;
+	-webkit-animation: animateCloud 33s linear infinite;
+	-moz-animation: animateCloud 33s linear infinite;
+	animation: animateCloud 33s linear infinite;
 
 	-webkit-transform: scale(0.2);
 	-moz-transform: scale(0.2);
