--- a/src/Home.css
+++ b/src/Home.css
@@ -21,7 +21,7 @@ div { margin: 0; }
   color: #485167;
   padding: 1%;
   padding-bottom: 3%;
-  font-size: small;
+  font-size: medium;
   margin: 0%
 }
 
