--- a/src/Main.css
+++ b/src/Main.css
@@ -29,12 +29,13 @@ p {margin-bottom: 0;}
 .Nav-bar {
   display: flex;
   justify-content: space-between;
+  padding-top: 2%;
   padding-bottom: 1%;
 }
 
 .Main-nav {
   font-family: palatino;
-  font-size: 0.75em;
+  font-size: 100%;
   color: #485167;
 }
 
@@ -60,7 +61,7 @@ p {margin-bottom: 0;}
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 1%;
-  padding-bottom: 10%;
+  padding-bottom: 8%;
 }
 
 .Desc {
@@ -69,8 +70,8 @@ p {margin-bottom: 0;}
 }
 
 .Icon {
-  height: 5%;
-  width: 3%;
+  height: 6%;
+  width: 4%;
 }
 
 .Line {
