--- a/src/Resume.css
+++ b/src/Resume.css
@@ -31,32 +31,33 @@ hr { margin-top: 0; }
 .Header {
   font-family: palatino;
   color: #485167;
+  font-size: 120%;
 }
 
 .Mission-header {
   font-family: palatino;
   color: #485167;
-  font-size: 1.5em;
+  font-size: 150%;
 }
 
 .DescL {
   font-family: palatino;
   color: #485167;
-  font-size: 0.7em;
+  font-size: 90%;
   text-align: left;
 }
 
 .DescR {
   font-family: palatino;
   color: #485167;
-  font-size: 0.7em;
-  text-align: center;
+  font-size: 90%;
+  text-align: right;
 }
 
 .Mission {
   font-family: palatino;
   color: #485167;
-  font-size: 1em;
+  font-size: 90%;
   padding-left: 10%;
   padding-right: 10%;
   padding-bottom: 5%;
@@ -65,7 +66,7 @@ hr { margin-top: 0; }
 .Desc-info-L {
   font-family: palatino;
   color: #485167;
-  font-size: 0.6em;
+  font-size: 80%;
   text-align: left;
 }
 
