--- a/src/Projects.css
+++ b/src/Projects.css
@@ -8,6 +8,37 @@ hr { margin-top: 0; }
   font-size: 80%;
 }
 
+.DescMedium {
+  font-family: palatino;
+  color: #485167;
+  font-size: 90%;
+}
+
+.DescLittle {
+  font-family: palatino;
+  color: #485167;
+  font-size: 70%;
+}
+
 .Line {
   color: #485167;
+}
+
+.LineTwo {
+  color: #485167;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.git {
+  height: 50px;
+  width: 50px;
+  margin-top: 20px;
+}
+
+.header {
+  display: flex;
+  flex-direction: horizontal;
+  justify-content: center;
+  align-items: center;
 }
