--- a/src/Resume.css
+++ b/src/Resume.css
@@ -13,6 +13,8 @@ a { text-decoration: none }
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 3%;
+  margin-left: 8%;
+  margin-right: 8%;
 }
 
 .Resume {
