--- a/src/About.css
+++ b/src/About.css
@@ -2,13 +2,6 @@
 
 hr { margin-top: 0; }
 
-
-.Desc {
-  font-family: palatino;
-  color: #485167;
-  font-size: 150%;
-}
-
 .DescOne {
   font-family: palatino;
   color: #485167;
@@ -17,7 +10,8 @@ hr { margin-top: 0; }
 }
 
 .Bailey {
-  margin-top: .5%;
+  flex: 1;
+  margin-top: 2%;
   height: 30%;
   width: 30%;
 }
@@ -31,4 +25,55 @@ hr { margin-top: 0; }
 
 .Line {
   color: #485167;
+}
+
+.aboutBox {
+  display: flex;
+  flex-direction: horizontal;
+  align-items: center;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.aboutBullets {
+  flex: 2;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.Desc {
+  font-family: palatino;
+  color: #485167;
+  font-size: 120%;
+  animation: fadeIn 2s;
+}
+
+.typewriter h1 {
+  font-family: palatino;
+  color: #485167;
+  overflow: hidden;
+  border-right: .10em solid transparent;
+  white-space: nowrap;
+  margin: 0 auto;
+  animation:
+    typing 4s steps(30, end),
+    blinking-cursor .5s step-end,
+    fadeOut 3s;
+}
+
+/*Typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* Typewriter cursor effect */
+@keyframes blinking-cursor {
+  0% { border-color: transparent }
+  50% { border-color: #485167; }
+}
+
+@keyframes fadeOut {
+  0% { border-color: #485167 }
+  80% { border-color: transparent }
 }
