--- a/src/css/About.css
+++ b/src/css/About.css
@@ -11,9 +11,8 @@ hr { margin-top: 0; }
 
 .Bailey {
   flex: 1;
-  margin-top: 2%;
-  height: 30%;
-  width: 30%;
+  height: 20%;
+  width: 20%;
 }
 
 .DescTwo {
@@ -36,9 +35,14 @@ hr { margin-top: 0; }
 }
 
 .aboutBullets {
+  background-color: #f1f5f9;
   flex: 2;
-  padding-left: 5%;
-  padding-right: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-bottom: 3%;
+  border-radius: 20px;
 }
 
 .Desc {
