--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -54,3 +54,20 @@ hr { margin-top: 0; }
   justify-content: center;
   align-items: center;
 }
+
+.flexBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.projectBox {
+  flex: 1;
+  align-items: center;
+  padding-left: 6%;
+  padding-right: 6%;
+  padding-bottom: 3%;
+  margin: 3%;
+  background-color: #f1f5f9;
+  border-radius: 20px;
+}
