--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -2,6 +2,7 @@
 hr { margin-top: 0; }
 
 .imageRow {
+  flex: 1;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -9,8 +10,8 @@ hr { margin-top: 0; }
 }
 
 .site {
-  height: 160px;
-  width: 280px;
+  height: 150px;
+  width: 260px;
   margin: 1%;
 }
 
