--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,25 +1,17 @@
+hr {
+  margin-top: 0;
+}
 
-
-hr { margin-top: 0; }
-
-.DescOne {
-  font-family: palatino;
+.Desc {
   color: #485167;
-  font-size: 120%;
+  font-size: 110%;
   text-align: center;
 }
 
 .Bailey {
-  flex: 1;
-  height: 20%;
-  width: 20%;
-}
-
-.DescTwo {
-  font-family: palatino;
-  color: #485167;
-  font-size: 90%;
-  text-align: center;
+  height: 30%;
+  width: 30%;
+  padding: 1% 0% 1% 0%;
 }
 
 .Line {
@@ -30,30 +22,18 @@ hr { margin-top: 0; }
   display: flex;
   flex-direction: horizontal;
   align-items: center;
-  margin-left: 5%;
-  margin-right: 5%;
+  margin: 3% 5% 0% 5%;
 }
 
 .aboutBullets {
   background-color: #f1f5f9;
-  flex: 2;
-  margin-left: 5%;
-  margin-right: 5%;
-  padding-left: 2%;
-  padding-right: 2%;
-  padding-bottom: 3%;
+  margin: 0% 5% 0% 5%;
+  padding: 2% 4% 3% 4%;
+  width: 50%;
   border-radius: 20px;
 }
 
-.Desc {
-  font-family: palatino;
-  color: #485167;
-  font-size: 120%;
-  animation: fadeIn 2s;
-}
-
-.typewriter h1 {
-  font-family: palatino;
+.typewriter h2 {
   color: #485167;
   overflow: hidden;
   border-right: .10em solid transparent;
