--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -2,12 +2,7 @@ div { margin: 0;}
 
 
 .Home-section {
-  font-size: large;
-  background-color:#dae2e8;
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-top: 2%;
-  padding-bottom: 1%;
+  padding: 2% 10% 0% 10%;
 }
 
 .Sun {
@@ -17,11 +12,9 @@ div { margin: 0;}
 }
 
 .Welcome {
-  font-family: palatino;
   color: #485167;
-  padding: 1%;
-  padding-bottom: 3%;
-  font-size: medium;
+  padding: 1% 1% 3% 1%;
+  font-size: 110%;
   margin: 0%
 }
 
@@ -34,7 +27,6 @@ div { margin: 0;}
   height: 20%;
   width: 80%;
 }
-
 
 .Line {
   color: #485167;
