--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -2,113 +2,75 @@ h1 {margin-bottom: 0; margin-top: 0;}
 
 p { margin-bottom: 0;}
 
-.Background {
-  background-color: #dae2e8;
-}
-
 .Main {
   text-align: center;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  margin-left: 5%;
-  margin-right: 5%;
+  padding: 2% 0% 2% 0%;
+  margin: 0% 5% 0% 5%;
 }
 
 .Main-section-top {
-  font-size: large;
-  background-color:#dae2e8;
-  padding-top: 1%;
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-bottom: 1%;
+  padding: 1% 10% 1% 10%;
   color: #485167;
 }
 
+.Main-title {
+  margin-top: 5%;
+  cursor: pointer;
+  font: italic normal 100 40px/2 'Pacifico', Helvetica, sans-serif;
+}
+
+.Main-title:hover {
+  color: #007887;
+}
 
 .Nav-bar {
   display: flex;
   justify-content: space-between;
-  padding-top: 2%;
-  padding-bottom: 1%;
+  padding: 2% 0% 1% 0%;
 }
 
 .Main-nav {
-  font-family: palatino;
-  font-size: 100%;
+  font-size: 120%;
+  cursor: pointer;
   color: #485167;
 }
 
 .Main-nav:hover {
-  color: #a8c7ea;
+  color: #007887;
 }
 
-.bottomOne {
+
+.Bottom {
   text-align: center;
-  font-size: small;
+  font-size: 90%;
   color: #485167;
-  margin-bottom: 1%;
-}
-
-.bottomTwo {
-  text-align: center;
-  font-size: small;
-  color: #485167;
-  margin-bottom: 5%;
-}
-
-
-.Main-title {
-  font-size: 3em;
-  padding-top: 5%;
-  margin: 0;
-  font-family: palatino;
-  font-style: bold;
-}
-
-.Main-title:hover {
-  color: #a8c7ea;
+  margin-bottom: 3%;
 }
 
 .Main-section {
   text-align: center;
-  background-color:#dae2e8;
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-top: 1%;
-  padding-bottom: 1%;
+  padding: 1% 10% 1% 10%
 }
 
 .Icons {
   text-align: center;
   justify-content: center;
-  background-color:#dae2e8;
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-top: 1%;
-  padding-bottom: 1%;
+  padding: 1% 10% 0% 10%;
 }
 
 .Desc {
-  font-family: palatino;
-  color: #485167
+  color: #485167;
 }
 
-
 .Link {
-  height: 6%;
-  width: 4%;
+  height: 5%;
+  width: 3%;
 }
 
 .Med {
-  height: 6%;
-  width: 4%;
-  padding-bottom: 0.5%;
-}
-
-.Fb {
-  padding-top: 0.5%;
-  height: 6.5%;
-  width: 4.5%;
+  height: 5%;
+  width: 3%;
+  padding-bottom: 0.375%;
 }
 
 .Line {
