--- a/src/css/Media.css
+++ b/src/css/Media.css
@@ -1,16 +1,12 @@
-
-
 hr { margin-top: 0; }
 
 
 .Desc {
-  font-family: palatino;
   color: #485167;
   font-size: 100%;
 }
 
 .link {
-  font-family: palatino;
   color: #485167;
   font-size: 100%;
   text-align: left;
@@ -22,7 +18,6 @@ hr { margin-top: 0; }
 
 
 .item {
-  font-family: palatino;
   color: #485167;
   font-size: 90%;
   text-align: center;
@@ -35,10 +30,7 @@ hr { margin-top: 0; }
 .mediaBox {
   background-color: #f1f5f9;
   flex: 2;
-  margin-left: 28%;
-  margin-right: 28%;
-  padding: 1%;
-  padding-top: .5%;
-  margin-bottom: 2%;
+  margin: 0% 28% 2% 28%;
+  padding: .5% 1% 1% 1%;
   border-radius: 25px;
 }
