--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-color: #dae2e8;
+  font-family: brandon-grotesque,HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+  background-color: #dbe2e9;
   overflow-x: hidden;
 }
