--- a/src/css/Media.css
+++ b/src/css/Media.css
@@ -34,3 +34,11 @@ hr { margin-top: 0; }
   padding: .5% 1% 3% 1%;
   border-radius: 25px;
 }
+
+.mediaBox-mobile {
+  background-color: #f1f5f9;
+  flex: 4;
+  margin: 0% 18% 2% 18%;
+  padding: .5% 1% 3% 1%;
+  border-radius: 25px;
+}
