updated media page and added images, css clean up on most pages, cloud on contact page

--- a/src/css/Resume.css
+++ b/src/css/Resume.css
@@ -3,10 +3,11 @@ hr { margin-top: 0; }
 div { margin: 0 ; }
 a { text-decoration: none }
 
-.Container {
+.resumeContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 2%;
 }
 
 .Button {
