--- a/src/css/About.css
+++ b/src/css/About.css
@@ -2,6 +2,13 @@ hr {
   margin-top: 0;
 }
 
+.aboutContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2%;
+}
+
 .Desc {
   color: #485167;
   font-size: 110%;
@@ -22,7 +29,7 @@ hr {
   display: flex;
   flex-direction: horizontal;
   align-items: center;
-  margin: 3% 5% 0% 5%;
+  margin: 1% 5% 0% 5%;
 }
 
 .aboutBullets {
@@ -40,9 +47,9 @@ hr {
   white-space: nowrap;
   margin: 0 auto;
   animation:
-    typing 4s steps(30, end),
+    typing 3s steps(30, end),
     blinking-cursor .5s step-end,
-    fadeOut 3s;
+    fadeOut 7s;
 }
 
 /*Typing effect */
