--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -6,6 +6,7 @@ hr { margin-top: 0; }
 .label {
   color: #485167;
   font-size: 90%;
+  font-style: oblique;
 }
 
 .submit {
@@ -33,10 +34,25 @@ hr { margin-top: 0; }
   width: 400px;
 }
 
+.singleCloud {
+  height: 30px;
+  width: 50px;
+  margin-left: 0.5%;
+  padding-top: 0.5%;
+}
+
+.contactCloudContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2%;
+}
 
 .Desc {
   color: #485167;
   font-size: 80%;
+  font-style: oblique;
 }
 
 
