--- a/src/css/Media.css
+++ b/src/css/Media.css
@@ -27,18 +27,43 @@ hr { margin-top: 0; }
   color: #485167;
 }
 
-.mediaBox {
-  background-color: #f1f5f9;
-  flex: 2;
-  margin: 0% 28% 2% 28%;
-  padding: .5% 1% 3% 1%;
+.asapIMG {
+  width: 80%;
   border-radius: 25px;
+}
+
+.evIMG {
+
+}
+
+.gcodeIMG {
+
+}
+
+.mediaContainer {
+  margin-top: 2%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+.boxContainter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f1f5f9;
+  border-radius: 25px;
+  width: 30%;
+  padding: 2% 0% 2% 0%;
+  margin: 0% 1% 0% 1%;
 }
 
 .mediaBox-mobile {
   background-color: #f1f5f9;
-  flex: 4;
-  margin: 0% 18% 2% 18%;
   padding: .5% 1% 3% 1%;
+  width: 30%;
+  margin: 0% 1% 0% 1%;
   border-radius: 25px;
 }
