--- a/src/css/About.css
+++ b/src/css/About.css
@@ -9,15 +9,22 @@ hr {
   margin-top: 2%;
 }
 
-.Desc {
-  color: #485167;
-  font-size: 110%;
-  text-align: center;
+.aboutContainer-mobile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2%;
 }
 
 .Bailey {
   height: 30%;
   width: 30%;
+  padding: 1% 0% 1% 0%;
+}
+
+.Bailey-mobile {
+  height: 60%;
+  width: 60%;
   padding: 1% 0% 1% 0%;
 }
 
@@ -29,7 +36,14 @@ hr {
   display: flex;
   flex-direction: horizontal;
   align-items: center;
-  margin: 1% 5% 0% 5%;
+  margin: 2% 5% 0% 5%;
+}
+
+.aboutBox-mobile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2% 5% 0% 5%;
 }
 
 .aboutBullets {
@@ -40,8 +54,29 @@ hr {
   border-radius: 20px;
 }
 
+.aboutBullets-mobile {
+  background-color: #f1f5f9;
+  margin: 0% 5% 0% 5%;
+  padding: 2% 4% 3% 4%;
+  width: 80%;
+  border-radius: 20px;
+}
+
+.desc {
+  color: #485167;
+  font-size: 110%;
+  text-align: center;
+}
+
+.desc-mobile {
+  color: #485167;
+  font-size: 140%;
+  text-align: center;
+}
+
 .typewriter h2 {
   color: #485167;
+  font-size: 150%;
   overflow: hidden;
   border-right: .10em solid transparent;
   white-space: nowrap;
