--- a/src/css/Media.css
+++ b/src/css/Media.css
@@ -1,11 +1,5 @@
 hr { margin-top: 0; }
 
-
-.Desc {
-  color: #485167;
-  font-size: 100%;
-}
-
 .link {
   color: #485167;
   font-size: 100%;
@@ -19,7 +13,13 @@ hr { margin-top: 0; }
 
 .item {
   color: #485167;
-  font-size: 90%;
+  text-align: center;
+  font-size: 110%
+}
+
+.item-mobile {
+  color: #485167;
+  font-size: 140%;
   text-align: center;
 }
 
@@ -27,20 +27,19 @@ hr { margin-top: 0; }
   color: #485167;
 }
 
-.asapIMG {
+.img {
   width: 80%;
   border-radius: 25px;
 }
 
-.evIMG {
-
+.container-mobile {
+  margin-top: 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.gcodeIMG {
-
-}
-
-.mediaContainer {
+.container {
   margin-top: 2%;
   display: flex;
   flex-direction: row;
@@ -48,7 +47,7 @@ hr { margin-top: 0; }
   justify-content: space-around;
 }
 
-.boxContainter {
+.mediaContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -56,14 +55,14 @@ hr { margin-top: 0; }
   background-color: #f1f5f9;
   border-radius: 25px;
   width: 30%;
-  padding: 2% 0% 2% 0%;
+  padding: 2% 1% 2% 1%;
   margin: 0% 1% 0% 1%;
 }
 
 .mediaBox-mobile {
   background-color: #f1f5f9;
-  padding: .5% 1% 3% 1%;
-  width: 30%;
-  margin: 0% 1% 0% 1%;
+  padding: .5% 1% 8% 1%;
+  width: 80%;
+  margin: 1% 1% 1% 1%;
   border-radius: 25px;
 }
