--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -11,19 +11,12 @@ div { margin: 0;}
   width: 10%;
 }
 
-.Welcome {
-  color: #485167;
-  padding: 1% 1% 3% 1%;
-  font-size: 110%;
-  margin: 0%
-}
-
 .Clouds {
-  height: 10vh;
+  height: 15vh;
+  margin-bottom: 5%;
 }
 
 .Buildings {
-  margin-top: 6%;
   height: 20%;
   width: 80%;
 }
