--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: brandon-grotesque,HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
-  background-color: #dbe2e9;
+  font-family: 'Karla', sans-serif;
+  /* font-family: brandon-grotesque,HelveticaNeue-Light,"Helvetic==a Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif; */
+  background-color: #f9f9f9;
   overflow-x: hidden;
 }
