--- a/src/css/About.css
+++ b/src/css/About.css
@@ -6,26 +6,32 @@ hr {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2%;
+  margin-top: 1%;
+  /* opacity: 0; */
+  animation: fadeInSlow 1s;
 }
 
 .aboutContainer-mobile {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2%;
+  margin-top: 1%;
 }
 
 .Bailey {
-  height: 30%;
-  width: 30%;
-  padding: 1% 0% 1% 0%;
+  height: 25%;
+  width: 25%;
+  margin: 0% 3% 0% 5%;
+  padding: 2% 2% 3% 4%;
 }
 
 .Bailey-mobile {
-  height: 60%;
-  width: 60%;
+  height: 50%;
+  width: 50%;
   padding: 1% 0% 1% 0%;
+  margin: 0% 3% 0% 5%;
+  padding: 2% 2% 3% 4%;
+
 }
 
 .Line {
@@ -43,19 +49,19 @@ hr {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2% 5% 0% 5%;
+  margin: 2% 5% 0% 2%;
 }
 
 .aboutBullets {
-  background-color: #f1f5f9;
-  margin: 0% 5% 0% 5%;
-  padding: 2% 4% 3% 4%;
+  background-color: #EBEBEB;
+  margin: 0% 5% 0% 2%;
+  padding: 2% 4% 3% 2%;
   width: 50%;
   border-radius: 20px;
 }
 
 .aboutBullets-mobile {
-  background-color: #f1f5f9;
+  background-color: #EBEBEB;
   margin: 0% 5% 0% 5%;
   padding: 2% 4% 3% 4%;
   width: 80%;
@@ -63,20 +69,17 @@ hr {
 }
 
 .desc {
-  color: #485167;
-  font-size: 110%;
+  font-size: 80%;
   text-align: center;
 }
 
 .desc-mobile {
-  color: #485167;
-  font-size: 140%;
+  font-size: 80%;
   text-align: center;
 }
 
 .typewriter h2 {
-  color: #485167;
-  font-size: 150%;
+  font-size: 80%;
   overflow: hidden;
   border-right: .10em solid transparent;
   white-space: nowrap;
@@ -102,4 +105,14 @@ hr {
 @keyframes fadeOut {
   0% { border-color: #485167 }
   80% { border-color: transparent }
+}
+
+@keyframes fadeInSlow {
+  from {
+     opacity: 0;
+   }
+
+   to {
+     opacity: 1;
+   }
 }
