--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -8,51 +8,10 @@ p { margin-bottom: 0;}
   margin: 0% 5% 0% 5%;
 }
 
-.Main-section-top {
-  margin: 1% 25% 1% 25%;
-}
-
-.Main-title {
-  margin-top: 3%;
-  cursor: pointer;
-  height: 50px;
-}
-
-.Nav-bar {
-  display: flex;
-  justify-content: space-around;
-  padding: 2% 0% 1% 0%;
-}
-
-.Main-nav {
-  font-size: 90%;
-  cursor: pointer;
-}
-
-.Main-nav:hover {
-  color: #007887;
-}
-
-
-.Bottom {
-  text-align: center;
-  font-size: 60%;
-  margin-bottom: 3%;
-}
-
-.Main-section {
-  text-align: center;
-  padding: 1% 10% 1% 10%
-}
-
 .Icons {
   text-align: center;
   justify-content: center;
   padding: 1% 10% 0% 10%;
-}
-
-.Desc {
-  color: #485167;
 }
 
 .Link {
@@ -64,4 +23,20 @@ p { margin-bottom: 0;}
   height: 5%;
   width: 3%;
   padding-bottom: 0.375%;
+}
+
+.mainTop {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mainTitle {
+  height: 50px;
+}
+
+.B {
+  height: 30%;
+  width: 30%;
+  margin-top: 1%;
 }
