--- a/src/css/Info.css
+++ b/src/css/Info.css
@@ -1,29 +1,55 @@
-a {
-  color: #007887;
-  text-decoration: none;
-  cursor: pointer;
+@media only screen and (min-width: 576px) {
+  p {
+    font-size: 20px;
+  }
+
+  a {
+    color: #007887;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 22px;
+  }
+
+  .infoContainer {
+    margin-bottom: 2%;
+  }
+
+  .infoChunk {
+    display: flex;
+    /* flex-direction: column; */
+    text-align: left;
+    margin: 0% 20% 0% 20%;
+    /* opacity: 0; */
+    animation: fadeInSlow 3s;
+  }
 }
 
+@media only screen and (max-width: 575px) {
+  p {
+    font-size: 16px;
+  }
 
-.infoContainer {
-  margin-bottom: 4%;
+  a {
+    color: #007887;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 18px;
+  }
+
+  .infoContainer {
+    margin-bottom: 2%;
+  }
+
+  .infoChunk {
+    display: flex;
+    /* flex-direction: column; */
+    text-align: left;
+    margin: 0% 15% 0% 15%;
+    /* opacity: 0; */
+    animation: fadeInSlow 3s;
+  }
 }
 
-.infoChunk {
-  display: flex;
-  /* flex-direction: column; */
-  text-align: left;
-  margin: 0% 10% 0% 10%;
-  /* opacity: 0; */
-  animation: fadeInSlow 3s;
-}
-
-.infoChunk-mobile {
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  margin-top: 1%;
-}
 
 @keyframes fadeOut {
   0% { border-color: #485167 }
@@ -32,10 +58,10 @@ a {
 
 @keyframes fadeInSlow {
   from {
-     opacity: 0;
-   }
+    opacity: 0;
+  }
 
-   to {
-     opacity: 1;
-   }
+  to {
+    opacity: 1;
+  }
 }
