--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,42 +1,149 @@
-h1 {margin-bottom: 0; margin-top: 0;}
+@media only screen and (min-width: 576px) {
+  h1 {
+    margin-bottom: 0; margin-top: 0;
+  }
 
-p { margin-bottom: 0;}
+  p {
+    margin-bottom: 0;
+  }
 
-.Main {
-  text-align: center;
-  padding: 2% 0% 2% 0%;
-  margin: 0% 5% 0% 5%;
+  .Main {
+    text-align: center;
+    padding: 2% 0% 2% 0%;
+    margin: 1% 5% 0% 5%;
+  }
+
+
+  .mainTop {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    margin: 0% 20% 0% 20%;
+  }
+
+  .hello {
+    font-family: 'Roboto', sans-serif;
+    font-size: 60px;
+    align-self: flex-end;
+
+  }
+
+  .B {
+    width: 25%;
+    margin-top: 1%;
+    margin-left: 1%;
+    align-self: flex-end;
+  }
+
+  .wave {
+    font-size: 50px;
+  }
+
+  .Icons {
+    text-align: center;
+    justify-content: center;
+  }
+
+  .Link {
+    height: 5%;
+    width: 2.5%;
+    padding: 5px;
+    border: 2px solid #332e2e;
+    border-radius: 12px;
+    margin: 1%;
+  }
+
+  .Link:hover {
+    animation: shake 1000ms infinite;
+    animation-timing-function: linear;
+  }
+
+  .Gmail {
+    height: 5%;
+    width: 2.5%;
+    padding: 5px;
+    border: 2px solid #332e2e;
+    border-radius: 12px;
+    margin: 1%;
+  }
+
+  .Gmail:hover {
+    animation: shake 1000ms infinite;
+    animation-timing-function: linear;
+  }
+
+
+  .mainTitle {
+    height: 50px;
+  }
 }
 
-.Icons {
-  text-align: center;
-  justify-content: center;
-  padding: 1% 10% 0% 10%;
+@media only screen and (max-width: 575px) {
+
+  h1 {margin-bottom: 0; margin-top: 0;}
+
+  p { margin-bottom: 0;}
+
+  .mainTop {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0% 10% 0% 10%;
+  }
+
+  .hello {
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+  }
+
+  .B {
+    width: 50%;
+  }
+
+  .wave {
+    font-size: 30px;
+  }
+
+  .Icons {
+    margin-top: 5%;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .Link {
+    height: 7%;
+    width: 5%;
+    padding: 5px;
+    border: 2px solid #332e2e;
+    border-radius: 12px;
+    margin: 1%;
+  }
+
+  .Link:hover {
+    animation: shake 1000ms infinite;
+    animation-timing-function: linear;
+  }
+
+  .Gmail {
+    height: 7%;
+    width: 5%;
+    padding: 5px;
+    border: 2px solid #332e2e;
+    border-radius: 12px;
+    margin: 1%;
+  }
+
+  .Gmail:hover {
+    animation: shake 1000ms infinite;
+    animation-timing-function: linear;
+  }
+
 }
 
-.Link {
-  height: 5%;
-  width: 3%;
-}
 
-.Med {
-  height: 5%;
-  width: 3%;
-  padding-bottom: 0.375%;
-}
-
-.mainTop {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.mainTitle {
-  height: 50px;
-}
-
-.B {
-  height: 30%;
-  width: 30%;
-  margin-top: 1%;
+@keyframes shake {
+  0% { transform: rotate(5deg); }
+  50% { transform: rotate(-10deg); }
+  100% { transform: rotate(5deg); }
 }
