--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Karla', sans-serif;
-  /* font-family: brandon-grotesque,HelveticaNeue-Light,"Helvetic==a Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif; */
-  background-color: #f9f9f9;
+  background-color: #F9F9F9;
   overflow-x: hidden;
 }
