--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Karla', sans-serif;
+  font-family: 'Lora';
   background-color: #F9F9F9;
   overflow-x: hidden;
 }
