--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Lora';
-  background-color: #F9F9F9;
+  background-color: #fcfcfc;
   overflow-x: hidden;
 }
