--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -22,7 +22,7 @@
   }
 
   .hello {
-    font-family:'Montserrat';
+    font-family:'April Fatface';
     font-size: 60px;
     align-self: flex-end;
 
