--- a/src/css/Info.css
+++ b/src/css/Info.css
@@ -4,7 +4,7 @@
   }
 
   a {
-    color: #6082b6;
+    color: #3d5a80;
     text-decoration: none;
     cursor: pointer;
     font-size: 22px;
@@ -30,7 +30,7 @@
   }
 
   a {
-    color: #007887;
+    color: #3d5a80;
     text-decoration: none;
     cursor: pointer;
     font-size: 18px;
